// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePage tests should display the error banner on parse error 1`] = `
<Page
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  title="Add Suppressions"
>
  <ErrorBanner
    parseError={true}
    persistError={false}
  />
  <Panel.LEGACY>
    <TabsWrapper>
      <Tabs
        connectBelow={true}
        selected={0}
        tabs={
          Array [
            Object {
              "content": "Single Recipient",
              "onClick": [Function],
            },
            Object {
              "content": "Bulk Upload",
              "onClick": [Function],
            },
          ]
        }
      />
    </TabsWrapper>
    <withRouter(Connect(ReduxForm)) />
  </Panel.LEGACY>
</Page>
`;

exports[`CreatePage tests should display the error banner on persist error 1`] = `
<Page
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  title="Add Suppressions"
>
  <ErrorBanner
    parseError={false}
    persistError={true}
  />
  <Panel.LEGACY>
    <TabsWrapper>
      <Tabs
        connectBelow={true}
        selected={0}
        tabs={
          Array [
            Object {
              "content": "Single Recipient",
              "onClick": [Function],
            },
            Object {
              "content": "Bulk Upload",
              "onClick": [Function],
            },
          ]
        }
      />
    </TabsWrapper>
    <withRouter(Connect(ReduxForm)) />
  </Panel.LEGACY>
</Page>
`;

exports[`CreatePage tests should render AddTab 1`] = `
<Page
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  title="Add Suppressions"
>
  <Panel.LEGACY>
    <TabsWrapper>
      <Tabs
        connectBelow={true}
        selected={0}
        tabs={
          Array [
            Object {
              "content": "Single Recipient",
              "onClick": [Function],
            },
            Object {
              "content": "Bulk Upload",
              "onClick": [Function],
            },
          ]
        }
      />
    </TabsWrapper>
    <withRouter(Connect(ReduxForm)) />
  </Panel.LEGACY>
</Page>
`;

exports[`CreatePage tests should render UploadTab 1`] = `
<Page
  breadcrumbAction={
    Object {
      "component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  title="Add Suppressions"
>
  <Panel.LEGACY>
    <TabsWrapper>
      <Tabs
        connectBelow={true}
        selected={1}
        tabs={
          Array [
            Object {
              "content": "Single Recipient",
              "onClick": [Function],
            },
            Object {
              "content": "Bulk Upload",
              "onClick": [Function],
            },
          ]
        }
      />
    </TabsWrapper>
    <withRouter(Connect(ReduxForm)) />
  </Panel.LEGACY>
</Page>
`;
